[package]
name = "cluster"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
confy = "0.6.1"
dialoguer = "0.11.0"
hyper = "1.6.0"
indicatif = "0.17.11"
netstat2 = "0.11.1"
ratatui = "0.29.0"
reqwest = "0.12.15"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.33.1"
tokio = { version = "1.44.1", features = ["full"] }
