[package]
name = "cluster"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
chrono = "0.4.40"
confy = "0.6.1"
dialoguer = "0.11.0"
dotenv = "0.15.0"
dotenvy = "0.15.7"
hyper = "1.6.0"
indicatif = "0.17.11"
log = "0.4.27"
log4rs = "1.3.0"
netstat2 = "0.11.1"
ratatui = "0.29.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio"] }
sysinfo = "0.33.1"
tokio = { version = "1.44.1", features = ["full"] }
